# pyBrowser

./: README.md  client.py  main.py  pyBrowser.bat  pyproject.toml  served.py
Client/: client.py  clientcopy.py  installer.cfg  pyBrowser.bat
Client/Python/: main.py
Server/: server.py
Server/Served/: tktest.py
Server/test apps/: served.py
test apps/: function.py  served.py
