[tool.poetry]
name = "repl_python3_pyBrowser"
version = "0.1.0"
description = ""
authors = ["JonS2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
